--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,13 @@ body{
   padding: 0;
   background-color: rgb(18, 18, 26)
 }
+.App {
+  text-align: center;
+}
+
+#particles canvas {
+  z-index: -1;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
