scroll animation add

--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,17 @@ body{
 .slick-slide>div{
   margin:  10px;
 }
+
+@keyframes scrollInfinite {
+  0% {
+    transform: translateX(-100%);
+  }
+
+  100% {
+    transform: translateX(100%);
+  }
+}
+
+.animate-scroll-infinite {
+  animation: scrollInfinite 30s linear infinite;
+}
